# PrivateFinance

./: .gitignore  .pre-commit-config.yaml  README.md  conftest.py  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini
.github/workflows/: pr-test.yml
acctmgr/: apps.py  context_processors.py  forms.py  models.py  tests.py  urls.py  views.py
acctmgr/migrations/: 0001_initial.py  0002_account_parent.py  0003_account_placeholder.py
acctmgr/static/css/: accounts.css  input.css  output.css
acctmgr/static/js/: complex_transaction.js
acctmgr/templates/acctmgr/: account_editor.html  account_list.html  account_parent.html
currencymgr/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
currencymgr/migrations/: 0001_initial.py
currencymgr/templates/currencymgr/: currency_editor.html
ledger/: forms.py  models.py  tests.py  urls.py  views.py
ledger/migrations/: 0001_initial.py
ledger/templates/ledger/: account_entry_list.html  xact_create_form_template.html
privatefinance/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html
