[project]
name = "privatefinance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.1",
]

[dependency-groups]
dev = [
    "coverage>=7.8.0",
    "jedi-language-server>=0.45.1",
    "pytest>=8.3.5",
    "pytest-django>=4.11.1",
]
