[project]
name = "privatefinance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.1",
]

[dependency-groups]
dev = [
    "coverage>=7.8.0",
    "jedi-language-server>=0.45.1",
    "pytest>=8.3.5",
    "pytest-django>=4.11.1",
    "ruff>=0.11.9",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "privatefinance.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.coverage.run]
branch = true
command_line = "-m pytest -s"
omit = [
  "**/tests.py",
  "**/*_tests.py",
  "**/test_*.py",
  "**/migrations/**"
]

[tool.coverage.report]
fail_under = 95
skip_empty = true
